# clab-api-server

./: -  .env.example  .gitignore  README.md  Taskfile.yml  build.dockerfile  build.sh  clab-api-dind-manager.sh  clab-api-manager.sh  flashpost-collection-clab-api-server.json  go.mod  go.sum  install.sh  run.sh
.github/workflows/: release.yml
cmd/server/: main.go
docker/: .env  Dockerfile-debian-dind  dind-entrypoint.sh  docker-compose.yml
docker/common/: .env.example  user-persistence.sh
docker/dind/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/dood/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/pam.d/: login
docker/simple-container/: Dockerfile  entrypoint.sh
docs/: docs.go  integration-guide.md  integration_guide.md  swagger.json  swagger.yaml
example/flashpost/: README.md  flashpost-collection-Containerlab API.json  flashpost-collection-clab-api-server.json
internal/api/: auth_handlers.go  handlers.go  health_handlers.go  helpers.go  info_handlers.go  lab_handlers.go  logs_handlers.go  middleware.go  routes.go  ssh_handlers.go  tools_handlers.go  topology_handlers.go  user_handlers.go
internal/auth/: auth.go  credentials.go  group.go  users.go
internal/clab/: executor.go
internal/config/: config.go
internal/models/: health_models.go  logs.go  models.go  ssh_models.go  user_models.go
internal/ssh/: manager.go
internal/templates/: redoc.html  templates.go
tests/: .env.example  TEST_DOCUMENTATION.md  auth_test.go  conftest.py  lab_config_test.go  lab_core_test.go  lab_exec_test.go  lab_network_test.go  lab_topology_test.go  labs_test.go  main_test.go  pyproject.toml  report.html  ssh_test.go  test-output.json  test-report.html  test_auth.py  test_labs.py  tools_cert_test.go  tools_network_test.go  version_test.go
tests_go/: .env.example  TEST_DOCUMENTATION.md  auth_suite_test.go  auth_test.go  health_suite_test.go  lab_config_suite_test.go  lab_core_suite_test.go  lab_exec_suite_test.go  lab_network_suite_test.go  lab_topology_suite_test.go  labs_test.go  logs_suite_test.go  main_test.go  suite_base_test.go  users_suite_test.go  version_suite_test.go
