[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-order>=1.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
[tool.pytest.ini_options]
# Keep existing options like markers, addopts, testpaths
markers = [
    "order: specify test execution order (requires pytest-order plugin)",
]
addopts = "-v" # Remove -s if you ONLY want logs in the report, keep -s if you want console AND report
testpaths = ["tests"]

# Logging Configuration
log_cli = true                  # Enable log display during CLI run
log_cli_level = "INFO"          # Log level for CLI output (DEBUG for more detail)
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest_run.log"     # Optional: Log to a file as well
log_file_level = "DEBUG"        # Log level for file output
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"