[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
    "pytest-order>=1.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
[tool.pytest.ini_options]
# Keep existing options like markers, testpaths
markers = [
    "order: specify test execution order (requires pytest-order plugin)",
]
# Updated addopts for better HTML report and console summary
addopts = "-ra --html=report.html --self-contained-html" # Removed -v, added -ra and HTML flags
testpaths = ["tests"]

# Logging Configuration (Your existing config is good)
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest_run.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
